fixes horizontal scrollbar bug on homepage finally

--- a/totalimpactwebapp/static/less/main.less
+++ b/totalimpactwebapp/static/less/main.less
@@ -422,7 +422,7 @@ div#tagline {
 
 div#sources {
    width:100%;
-   padding:20px 20px 0;
+   padding:30px 0 0 0 ;
    background:#fff;
    height: 127px;
    width: 100%;
